[gd_scene load_steps=10 format=3 uid="uid://dx0us2dbgwv3b"]

[ext_resource type="PackedScene" uid="uid://ct0o4u7jepmja" path="res://src/base_ui/pulse_button/Pulse_button.tscn" id="1_2ll55"]
[ext_resource type="Script" uid="uid://tqwb6j621t1m" path="res://src/base_ui/pulse_checkbox/pulse_checkbox.gd" id="1_usvlw"]
[ext_resource type="Texture2D" uid="uid://b37i0kp2vgepa" path="res://assets/images/ui/checkmark.png" id="2_4dq6u"]
[ext_resource type="Theme" uid="uid://8b0nu8iueg0s" path="res://assets/resources/themes/theme_ui.tres" id="4_peear"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6odmt"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wcgiw"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_a1hj7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_44kwf"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3xpkh"]

[node name="PulseCheckbox" type="Button"]
custom_minimum_size = Vector2(300, 48)
offset_right = 300.0
offset_bottom = 48.0
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_styles/focus = SubResource("StyleBoxEmpty_6odmt")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_wcgiw")
theme_override_styles/hover = SubResource("StyleBoxEmpty_a1hj7")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_44kwf")
theme_override_styles/normal = SubResource("StyleBoxEmpty_3xpkh")
toggle_mode = true
script = ExtResource("1_usvlw")
animation_speed = 0.25
target_scale = 1.1
is_toggled = false

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 48.0
grow_horizontal = 2
mouse_filter = 2
theme_override_constants/separation = 16

[node name="C" type="Control" parent="HBoxContainer"]
custom_minimum_size = Vector2(36, 48)
layout_mode = 2

[node name="C2" type="Control" parent="HBoxContainer/C"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.75, 0.75)

[node name="PulseButton" parent="HBoxContainer/C/C2" instance=ExtResource("1_2ll55")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -24.0
offset_top = -24.0
offset_right = 24.0
offset_bottom = 24.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 1
mouse_force_pass_scroll_events = false
texture_on = ExtResource("2_4dq6u")

[node name="Control" type="Control" parent="HBoxContainer"]
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="Label" type="Label" parent="HBoxContainer/Control"]
custom_minimum_size = Vector2(0, 48)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -24.0
offset_right = 300.0
offset_bottom = 24.0
grow_vertical = 2
pivot_offset = Vector2(0, 24)
size_flags_horizontal = 3
theme = ExtResource("4_peear")
vertical_alignment = 1

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="mouse_entered" from="HBoxContainer/C/C2/PulseButton" to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="HBoxContainer/C/C2/PulseButton" to="." method="_on_mouse_exited"]
[connection signal="pressed" from="HBoxContainer/C/C2/PulseButton" to="." method="_pressed" binds= [true]]
